--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@types/react": "^18.0.10",
+    "@types/react-native": "^0.67.7",
+    "immer": "^9.0.14",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-paper": "^4.12.1",
+    "react-native-progress-bar": "^0.1.2",
+    "react-native-progress-steps": "^1.3.4",
+    "react-native-redux": "^1.0.11",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga-routines": "^3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
