--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/netinfo": "^9.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/react": "^18.0.12",
     "@types/react-native": "^0.67.8",
     "@types/react-native-vector-icons": "^6.4.10",
+    "color-convert": "^2.0.1",
     "formik": "^2.2.9",
     "immer": "^9.0.14",
     "moment": "^2.29.3",
@@ -35,8 +38,10 @@
     "react-native-redux": "^1.0.11",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-wifi-reborn": "^4.6.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-saga-routines": "^3.2.3",
@@ -46,6 +51,8 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-saga-routines": "^3.1.2",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
@@ -54,5 +61,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
