--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.12",
     "@types/react-native": "^0.67.8",
     "@types/react-native-vector-icons": "^6.4.10",
+    "axios": "^0.27.2",
     "color-convert": "^2.0.1",
     "formik": "^2.2.9",
     "immer": "^9.0.14",
@@ -30,6 +31,7 @@
     "react-native-bouncy-checkbox-group": "^0.1.0",
     "react-native-date-picker": "^4.2.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-orientation-loading-overlay": "^0.1.6",
     "react-native-paper": "^4.12.1",
