--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
-    "@types/react": "^18.0.12",
+    "@types/react": "^18.0.13",
     "@types/react-native": "^0.67.8",
     "@types/react-native-vector-icons": "^6.4.10",
     "axios": "^0.27.2",
@@ -26,9 +26,12 @@
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-anchor-carousel": "^4.0.1",
     "react-native-awesome-loading": "^1.0.15",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-bouncy-checkbox-group": "^0.1.0",
+    "react-native-calendar-list": "^1.0.1",
+    "react-native-calendars": "^1.1284.0",
     "react-native-date-picker": "^4.2.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-linear-gradient": "^2.5.6",
@@ -42,11 +45,13 @@
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-wifi-reborn": "^4.6.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-saga-routines": "^3.2.3",
+    "toggle-switch-react-native": "^3.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
