--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/netinfo": "^9.0.0",
+    "@react-native-community/slider": "^4.2.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
-    "@types/react": "^18.0.13",
-    "@types/react-native": "^0.67.8",
+    "@types/react": "^18.0.14",
+    "@types/react-native": "^0.67.9",
     "@types/react-native-vector-icons": "^6.4.10",
     "axios": "^0.27.2",
     "color-convert": "^2.0.1",
