--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/netinfo": "^9.0.0",
     "@react-native-community/slider": "^4.2.3",
+    "@react-native-picker/picker": "^2.4.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -33,12 +34,15 @@
     "react-native-bouncy-checkbox-group": "^0.1.0",
     "react-native-calendar-list": "^1.0.1",
     "react-native-calendars": "^1.1284.0",
+    "react-native-color-picker": "^0.6.0",
+    "react-native-color-wheel": "^0.1.7",
     "react-native-date-picker": "^4.2.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-orientation-loading-overlay": "^0.1.6",
     "react-native-paper": "^4.12.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress-bar": "^0.1.2",
     "react-native-progress-steps": "^1.3.4",
     "react-native-redux": "^1.0.11",
@@ -48,6 +52,7 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
