--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-redux": "^1.0.11",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-scroll-indicator": "^0.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-switch": "^1.5.1",
