--- a/ios/SweetDreams/Info.plist
+++ b/ios/SweetDreams/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -36,9 +36,13 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string/>
+	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Misty the Cloud uses the nicrophone to record sounds for Russell</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>JosefinSans.ttf</string>
