--- a/ios/SweetDreams/Info.plist
+++ b/ios/SweetDreams/Info.plist
@@ -35,8 +35,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Misty the Cloud uses the nicrophone to record sounds for Russell</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>JosefinSans.ttf</string>
