--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-scroll-indicator": "^0.1.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "^12.3.0",
     "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-wheel-color-picker": "^1.2.0",
