--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-native-vector-icons": "^6.4.10",
     "axios": "^0.27.2",
     "color-convert": "^2.0.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "immer": "^9.0.14",
     "moment": "^2.29.3",
@@ -34,8 +35,9 @@
     "react-native-awesome-loading": "^1.0.15",
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-bouncy-checkbox-group": "^0.1.0",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-calendar-list": "^1.0.1",
-    "react-native-calendars": "^1.1284.0",
+    "react-native-calendars": "^1.1285.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-color-wheel": "^0.1.7",
     "react-native-date-picker": "^4.2.2",
