--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-internet-connection-alert": "^0.1.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-maps": "^1.0.2",
     "react-native-orientation-loading-overlay": "^0.1.6",
     "react-native-paper": "^4.12.1",
     "react-native-picker-select": "^8.0.4",
