--- a/ios/SweetDreams/Info.plist
+++ b/ios/SweetDreams/Info.plist
@@ -43,6 +43,8 @@
 	<string>Misty the Cloud uses this to a autofill the address when you create a calendar event.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Misty the Cloud uses the nicrophone to record sounds for Russell</string>
+	<key>com.apple.developer.networking.HotspotConfiguration</key>
+	<key>com.apple.developer.networking.wifi-info</key>
 	<key>UIAppFonts</key>
 	<array>
 		<string>JosefinSans.ttf</string>
