--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/geolocation": "^2.1.0",
     "@react-native-community/netinfo": "^9.1.0",
     "@react-native-community/slider": "^4.2.3",
     "@react-native-picker/picker": "^2.4.1",
@@ -42,6 +43,7 @@
     "react-native-color-wheel": "^0.1.7",
     "react-native-date-picker": "^4.2.2",
     "react-native-fast-image": "^8.5.11",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-internet-connection-alert": "^0.1.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^3.0.0",
