--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-calendar-events": "^2.2.0",
     "react-native-calendar-list": "^1.0.1",
     "react-native-calendars": "^1.1285.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-color-wheel": "^0.1.7",
     "react-native-date-picker": "^4.2.2",
