--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,8 +6,11 @@ buildscript {
     ext {
         buildToolsVersion = "31.0.0"
         minSdkVersion = 21
+        // Note: Below change is necessary for pause / resume audio feature. Not for Kotlin.
+        minSdkVersion = 24
         compileSdkVersion = 31
         targetSdkVersion = 31
+        kotlinVersion = '1.5.0'
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
@@ -23,6 +26,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.0.4")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
         // NOTE: Do not place your application dependencies here; they belong
