--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "immer": "^9.0.14",
+    "luxon": "^3.0.1",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
