--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-color-picker": "^0.6.0",
     "react-native-color-wheel": "^0.1.7",
     "react-native-date-picker": "^4.2.2",
+    "react-native-device-info": "^10.0.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-internet-connection-alert": "^0.1.8",
