--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -260,23 +260,26 @@ android {
 }
 
 dependencies {
-  ...
+// ...
 
-    compile 'com.facebook.fresco:fresco:1.+'
+    implementation 'com.facebook.fresco:fresco:1.+'
 
     // For animated GIF support
-    compile 'com.facebook.fresco:animated-gif:1.+'
+    implementation 'com.facebook.fresco:animated-gif:1.+'
 
     // For WebP support, including animated WebP
-    compile 'com.facebook.fresco:animated-webp:1.+'
-    compile 'com.facebook.fresco:webpsupport:1.+'
+    implementation 'com.facebook.fresco:animated-webp:1.+'
+    implementation 'com.facebook.fresco:webpsupport:1.+'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation project(':react-native-wifi-reborn')
+
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
